// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-101j5b"
    data-testid="audio"
  />
   
  <div
    class="flex items-center svelte-101j5b"
  >
    <span
      class="current svelte-101j5b"
    />
     
    <div
      class="player svelte-101j5b"
    >
      <span
        class="controls svelte-101j5b"
      >
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_previous
          </i>
           
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly large"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_next
          </i>
           
           
        </button>
      </span>
       
      <span
        class="controls time svelte-101j5b"
      >
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-101j5b"
    >
      <div
        class="volume svelte-101j5b"
      >
        <span
          class="volume-slider svelte-101j5b"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            volume_up
          </i>
           
           
        </button>
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-j6xhgj iconOnly noBorder"
          >
            <i
              class="material-icons svelte-j6xhgj"
            >
              repeat
            </i>
             
             
          </button>
        </span>
      </div>
       
      <button
        class="svelte-j6xhgj iconOnly large"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          queue_music
        </i>
         
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-101j5b"
    data-testid="audio"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-101j5b"
  >
    <span
      class="current svelte-101j5b"
    >
      <div
        class="undefined root svelte-whrgz7"
      >
        <a
          class="flex-none"
          href="#/album/1"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-whrgz7"
        >
          <span
            class="title svelte-whrgz7"
          >
            file 1
          </span>
           
          <a
            class="text-sm underlined"
            href="#/artist/0"
            onclick="event.stopPropagation()"
          >
            Someone
          </a>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-101j5b"
    >
      <span
        class="controls svelte-101j5b"
      >
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_previous
          </i>
           
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly large"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_next
          </i>
           
           
        </button>
      </span>
       
      <span
        class="controls time svelte-101j5b"
      >
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-101j5b"
    >
      <div
        class="volume svelte-101j5b"
      >
        <span
          class="volume-slider svelte-101j5b"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            volume_up
          </i>
           
           
        </button>
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-j6xhgj iconOnly noBorder"
          >
            <i
              class="material-icons svelte-j6xhgj"
            >
              repeat
            </i>
             
             
          </button>
        </span>
      </div>
       
      <button
        class="svelte-j6xhgj iconOnly large"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          queue_music
        </i>
         
         
      </button>
    </span>
  </div>
</section>
`;
